# hookman

./: Cargo.toml  README.md  USAGE.md  codecov.yml
.github/workflows/: ci.yml  release.yml  tests.yml
.hookman/hooks/: pre-commit.toml
docs/: hookman.1.md
src/: cli.rs  error.rs  main.rs
src/commands/: add.rs  apply.rs  init.rs  list.rs  mod.rs  remove.rs  status.rs
src/generator/: mod.rs  script.rs
src/models/: command.rs  config.rs  hook.rs  mod.rs
src/storage/: mod.rs  toml_storage.rs
tests/: integration_test.rs
