[package]
name = "hookman"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Git hooks manager CLI tool"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
